# sha1dir

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  install.yml
src/: lib.rs  main.rs
