[package]
name = "sha1dir"
version = "1.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Checksum of a directory tree"
repository = "https://github.com/dtolnay/sha1dir"
readme = "README.md"

[dependencies]
clap = { version = "3.0", default-features = false, features = ["derive", "std", "suggestions"] }
memmap = "0.7"
num_cpus = "1.0"
parking_lot = "0.11"
rayon = "1.0"
sha1 = "0.10"

[profile.release]
panic = "abort"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
