[package]
name = "sha1dir"
version = "1.0.10"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["command-line-utilities"]
description = "Checksum of a directory tree"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/sha1dir"

[dependencies]
clap = { version = "4", features = ["deprecated", "derive"] }
memmap = "0.7"
num_cpus = "1.0"
parking_lot = "0.12"
rayon = "1.0"
sha1 = "0.10"

[profile.release]
panic = "abort"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
